[package]
name = "rush"
version = "0.5.1"
edition = "2021"
authors = ["Ringo Hoffmann <contact@zekro.de>"]
description = "A tiny HTTP benchmarking and performance testing CLI tool."
readme = "README.md"
license = "MIT"
keywords = ["http", "benchmarking", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
humantime = "2.3.0"
rand = "0.9.2"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "blocking"] }
